最新完整项目

--- a/cloud-consumer80-feign/src/main/resources/application.yml
+++ b/cloud-consumer80-feign/src/main/resources/application.yml
@@ -23,4 +23,7 @@ ribbon:
 logging:
   level:
     org.example.consumerFeign.service.PaymentFeignService: debug
+feign:
+  hystrix:
+    enabled: true
 
