--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
       <module>cloud-eureka-server7002</module>
       <module>cloud-payment8002</module>
       <module>cloud-consumer80-feign</module>
+      <module>cloud-hystrix-payment8001</module>
   </modules>
   <packaging>pom</packaging>
   <name>Maven</name>
