--- a/cloud-consumer80-feign/src/main/resources/application.yml
+++ b/cloud-consumer80-feign/src/main/resources/application.yml
@@ -4,6 +4,11 @@ server:
 spring:
   application:
     name: cloud-consumer
+  zipkin:
+    base-url: http://localhost:9941
+  sleuth:
+    sampler:
+      probability: 1
 
 eureka:
   client:
