--- a/cloud-payment8002/src/main/resources/application.yml
+++ b/cloud-payment8002/src/main/resources/application.yml
@@ -4,6 +4,11 @@ server:
 spring:
   application:
     name: cloud-payment
+  zipkin:
+    base-url:  http://localhost:9411/
+  sleuth:
+    sampler:
+      probability: 1
   datasource:
     # mysql驱动类
     driver-class-name: com.mysql.jdbc.Driver
