--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,14 @@
       <module>cloud-payment8002</module>
       <module>cloud-consumer80-feign</module>
       <module>cloud-hystrix-payment8001</module>
+      <module>cloud-gateway9527</module>
+    <module>cloud-config-center3344</module>
+    <module>cloud-config-client3344</module>
+      <module>cloud-config-center3366</module>
+      <module>cloud-stream-rabbitmq-provider8801</module>
+      <module>cloud-consumer8802</module>
+      <module>cloud-stream-rabbitmq-consumer8802</module>
+    <module>cloud-stream-rabbitmq-consumer8803</module>
   </modules>
   <packaging>pom</packaging>
   <name>Maven</name>
