--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,15 @@
       <module>cloud-consumer8802</module>
       <module>cloud-stream-rabbitmq-consumer8802</module>
     <module>cloud-stream-rabbitmq-consumer8803</module>
+    <module>cloudalibaba-provider-payment9001</module>
+    <module>cloudalibaba-provider-payment9002</module>
+      <module>cloudalibaba-consumer-nacos-order83</module>
+      <module>cloudlibaba-config-nacos-client3377</module>
+    <module>cloudalibaba-sentinel-service8401</module>
+      <module>seata-order-service2001</module>
+      <module>seata-storage-service</module>
+      <module>seata-account-service</module>
+      <module>mybatis-plus</module>
   </modules>
   <packaging>pom</packaging>
   <name>Maven</name>
